<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_box_one"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/margin_wide"
            android:layout_marginEnd="16dp"
            android:text="@string/box_one"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_box_two"
            style="@style/WhiteBox"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/box_two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_box_one" />

        <TextView
            android:id="@+id/tv_box_three"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/box_three"
            app:layout_constraintBottom_toTopOf="@+id/tv_box_four"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_box_two"
            app:layout_constraintTop_toTopOf="@+id/tv_box_two" />

        <TextView
            android:id="@+id/tv_box_four"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/box_four"
            app:layout_constraintBottom_toTopOf="@+id/tv_box_five"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_box_two"
            app:layout_constraintTop_toBottomOf="@+id/tv_box_three" />

        <TextView
            android:id="@+id/tv_box_five"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/box_five"
            app:layout_constraintBottom_toBottomOf="@+id/tv_box_two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_box_two"
            app:layout_constraintTop_toBottomOf="@+id/tv_box_four" />

        <TextView
            android:id="@+id/tv_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/how_to_play"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_info"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/tap_boxes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tv_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_box_two"
            app:layout_constraintVertical_bias="0.067" />

        <Button
            android:id="@+id/btn_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/button_red"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_yellow"
            app:layout_constraintEnd_toStartOf="@+id/btn_yellow"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/button_yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_green"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_red"
            app:layout_constraintTop_toBottomOf="@+id/tv_info"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btn_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/button_green"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_yellow" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
